Fix duplicate localThresholdMs (localThreshold) server parameters

XMLWordPrintableJSON

    • Minor Change
    • ALL
    • Sharding 2020-11-30, Sharding 2020-12-14, Sharding 2020-12-28, Sharding 2021-01-11, Sharding 2021-01-25, Sharding 2021-02-22, Sharding 2021-03-08, Sharding 2021-03-22, Sharding 2021-04-05, Sharding 2021-04-19, Sharding 2021-05-03, Sharding 2022-01-24
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The server defines the parameters "localThreshold" defined in src/mongo/s/mongos_options.idl, and "localThresholdMs" defined in src/mongo/client/sdam/sdam_configuration_parameters.idl. Currently, the former is used here, and the latter is used here. We should combine the two parameters, so that either will have the same effect regardless of the RSM implementation (assuming that backwards compatibility is important here), and update the documentation here appropriately.

            Assignee:
            Rachita Dhawan
            Reporter:
            Lamont Nelson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: