SERVER-51842 Fix duplicate localThresholdMs (localThreshold) server parameters